--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.Tibcon</string>
+	<string>com.saasinjune</string>
 	<key>PROJECT_ID</key>
 	<string>Tibcon-70b58</string>
 	<key>STORAGE_BUCKET</key>
